# fauxdantic

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
src/fauxdantic/: __init__.py  config.py  core.py  exceptions.py  type_handling.py  value_generation.py
src/fauxdantic/generators/: collections.py  strings.py
tests/: conftest.py  test_builtin.py  test_complex_model.py  test_configuration.py  test_context.py  test_core.py  test_error_handling.py  test_geographic_fields.py  test_type_handling.py  test_value_generation.py
